# tesla-key-esp32

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md  SECURITY.md  manifest.json  partitions.csv  previews.json  project-review-2026-06-20.md  provision.py  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c5  sdkconfig.defaults.esp32s3
.agents/skills/add-logic-test/: SKILL.md
.agents/skills/device-diag/: SKILL.md
.agents/skills/display-preview/: SKILL.md
.agents/skills/flash-esp32/: SKILL.md
.agents/skills/project-review/: SKILL.md
.agents/skills/ship/: SKILL.md
.agents/skills/skill-audit/: SKILL.md
.agents/skills/usb-recovery/: SKILL.md
.agents/skills/vehicle-command-audit/: SKILL.md
.claude/: CLAUDE.md  settings.json
.claude/agents/: claude-code-optimizer.md  doc-drift-checker.md  heap-safety-reviewer.md  multi-target-build-reviewer.md
.claude/hooks/: build-efficiency-check.sh  pr-gate-lib.sh  report-capabilities.sh  require-project-review.sh  require-skill-audit.sh
.claude/skills/add-logic-test/: SKILL.md
.claude/skills/device-diag/: SKILL.md
.claude/skills/e2e-evcc/: SKILL.md
.claude/skills/flash-esp32/: SKILL.md
.claude/skills/ota-release-verify/: SKILL.md
.claude/skills/project-review/: SKILL.md
.claude/skills/ship/: SKILL.md
.claude/skills/skill-audit/: SKILL.md
.claude/skills/usb-recovery/: SKILL.md
.claude/skills/vehicle-command-audit/: SKILL.md
.codex/: hooks.json
.codex/agents/: claude-code-optimizer.toml  doc-drift-checker.toml  heap-safety-reviewer.toml  multi-target-build-reviewer.toml
.codex/hooks/: build-efficiency-check.sh  clang-format-edit.sh  pr-gate-lib.sh  run-logic-tests.sh
.github/: pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_or_task.yml
.github/workflows/: build.yml  pr-preview-cleanup.yml  renovate.yaml  tmp-codeql-scan.yml
PR/157/: ARCHITECTURE.md  index.html  manifest.json
PR/158/: ARCHITECTURE.md  index.html  manifest.json
PR/159/: manifest.json
PR/160/: manifest.json
PR/161/: ARCHITECTURE.md  manifest.json
PR/162/: SECURITY.md  index.html  manifest.json
PR/163/: manifest.json
PR/164/: manifest.json
PR/165/: manifest.json
PR/166/: manifest.json
PR/167/: manifest.json
PR/168/: manifest.json
PR/169/: manifest.json
PR/170/: ARCHITECTURE.md  manifest.json
PR/171/: manifest.json
PR/172/: ARCHITECTURE.md  manifest.json
PR/173/: ARCHITECTURE.md  manifest.json
PR/174/: ARCHITECTURE.md  manifest.json
PR/175/: manifest.json
PR/176/: manifest.json
PR/177/: manifest.json
PR/178/: manifest.json
PR/179/: ARCHITECTURE.md  README.md  manifest.json
PR/180/: manifest.json
PR/182/: manifest.json
PR/183/: index.html  manifest.json
PR/184/: manifest.json
PR/185/: manifest.json
PR/186/: manifest.json
PR/187/: ARCHITECTURE.md  manifest.json
PR/188/: manifest.json
PR/189/: README.md  manifest.json
PR/190/: manifest.json
PR/191/: ARCHITECTURE.md  manifest.json
PR/192/: manifest.json
PR/193/: ARCHITECTURE.md  manifest.json
PR/194/: manifest.json
PR/195/: MCP.md  manifest.json
PR/196/: ARCHITECTURE.md  manifest.json
PR/197/: manifest.json
PR/198/: ARCHITECTURE.md  manifest.json
PR/199/: ARCHITECTURE.md  manifest.json
PR/200/: manifest.json
PR/201/: ARCHITECTURE.md  manifest.json
PR/202/: manifest.json
PR/203/: ARCHITECTURE.md  manifest.json
PR/205/: ARCHITECTURE.md  manifest.json
PR/206/: ARCHITECTURE.md  manifest.json
PR/207/: README.md  index.html  manifest.json
PR/208/: manifest.json
boards/: t-dongle-s3.defaults
docs/: ARCHITECTURE.md  MCP.md  README.md  SECURITY.md  architecture-review-2026-07.md  index.html  manifest.json  security-audit-2026-06.md
docs/adr/: 0001-esp32c5-target-upstreaming.md  0002-idf6-mbedtls4-crypto-seam.md
main/: CMakeLists.txt  Kconfig.projbuild  ble_client.cpp  ble_client.hpp  command_exec.cpp  diag_log.cpp  diag_log.hpp  display.cpp  display.hpp  display_font.h  http_api.cpp  http_common.cpp  http_config.cpp  http_events.cpp  http_handlers.hpp  http_ota.cpp  http_server.cpp  http_server.hpp  http_status.cpp  idf_component.yml  led_status.cpp  led_status.hpp  main.cpp  mcp_server.cpp  mcp_server.hpp  mqtt_ha.cpp  mqtt_ha.hpp  nvs_storage.cpp  nvs_storage.hpp  ota_update.cpp  ota_update.hpp  platform.hpp  provisioning.cpp  provisioning.hpp  rtos_guard.hpp  syslog.cpp  syslog.hpp  task_config.hpp  vehicle_commands.cpp  vehicle_ctrl.cpp  (+4 more)
main/logic/: active_window.hpp  ble_phase.hpp  ble_row.hpp  command_registry.hpp  command_result.hpp  connect_outcome.hpp  display_model.hpp  ha_templates.hpp  heap_watchdog.hpp  http_body.hpp  led_status.hpp  link_state.hpp  mcp.hpp  soc_gradient.hpp  status_model.hpp  syslog_policy.hpp  target.hpp  ui_state.hpp  units.hpp  vehicle_data.hpp  vin.hpp  ws_policy.hpp
main/www/: app.js  index.html  inline_assets.cmake  setup.html  style.css
scripts/: build-pages.sh  capture_wake.py  check-ble-row-parity.sh  check-display-sim-parity.sh  ci-build-all.sh  e2e_evcc.sh  idf-docker.sh  next-version.sh  prepare-tesla-ble-c5.sh  publish-pages-branch.sh  run-mock-tests.sh  stage-web-installer.sh
test/: CMakeLists.txt  README.md  ble_row_golden_dump.cpp  display_golden_dump.cpp  test_logic.cpp
tools/: ble_row_parity.js  display_sim.py
