idf_component_register(
    SRCS
        "main.cpp"
        "ble_client.cpp"
        "nvs_storage.cpp"
        "vehicle_ctrl.cpp"
        "http_server.cpp"
        "provisioning.cpp"
        "diag_log.cpp"
        "ota_update.cpp"
        "mqtt_ha.cpp"
    INCLUDE_DIRS
        "."
    EMBED_TXTFILES
        "www/index.html"
        "www/setup.html"
    REQUIRES
        nvs_flash
        esp_wifi
        esp_event
        esp_netif
        esp_http_server
        esp_app_format
        esp_https_ota
        app_update
        esp_http_client
        esp-tls
        bt
        json
        lwip
        driver
        mqtt
        esp_timer
)
